virtualbox-ose (3.1.51-dfsg-1) UNRELEASED; urgency=low

  * New upstream release 3.2.0 Beta 1.
  * Strip EFI firmware images as they are non-free.
    - Add 23-dont-install-efi-images.dpatch.
  * Add build-dependencies required by new upstream version.
  * Adapt 18-system-xorg.dpatch to new upstream version.
  * Update to new upstream release of vdfuse.

 -- Felix Geyer <debfx-pkg@fobos.de>  Sun, 02 May 2010 14:55:04 +0200

virtualbox-ose (3.1.6-dfsg-3) unstable; urgency=low

  * Move 10-vboxmouse.conf to 50-vboxmouse.conf and install it in
    /usr/share/X11/xorg.conf.d.
  * Use substvar from new xsfbs.mk.

 -- Felix Geyer <debfx-pkg@fobos.de>  Sun, 18 Apr 2010 18:56:10 +0200

virtualbox-ose (3.1.6-dfsg-2) unstable; urgency=low

  * Improve 20-hide-help-buttons.dpatch so all help buttons are hidden.
  * Set source format version explicitly to "1.0".
  * Adapt to xserver 1.8 input driver detection. (LP: #546933)
    - Add 10-vboxmouse.conf
    - Update virtualbox-ose-guest-x11.udev

 -- Felix Geyer <debfx-pkg@fobos.de>  Wed, 31 Mar 2010 15:15:44 +0200

virtualbox-ose (3.1.6-dfsg-1) unstable; urgency=low

  * New upstream version.
  * Drop 02-r27248.dpatch as it's applied upstream.
  * Use dh_lintian to install overrides.

 -- Felix Geyer <debfx-pkg@fobos.de>  Fri, 26 Mar 2010 11:25:46 +0100

virtualbox-ose (3.1.4-dfsg-3) unstable; urgency=low

  [ Felix Geyer ]
  * Move virtualbox-ose-guest-x11 to section x11.
  * Replace 18-xorg-1.6.dpatch with a new patch that allows to easily
    switch to a different X Server version.
  * Remove /usr/share/virtualbox/x11config15.pl as we are at X Server 1.7.

  [ Michael Meskes ]
  * Apply upstream changeset 27248 to make virtualbox guest additions
    work with drm code in kernels 2.6.33+. (Closes: #574662)
  * Applied patch by nutzteil <nutzteil@web.de> to make init script
    consistent in (Closes: #574831)

 -- Michael Meskes <meskes@debian.org>  Tue, 23 Mar 2010 15:54:49 +0100
